--- a/styles.css
+++ b/styles.css
@@ -1,35 +1,89 @@
-body{
-    background-color: rgb(243, 241, 241);
+html{
+    height:100%;
 }
 
-.table-head{
-    padding-top: 50px;
+body {
+    background-color: rgb(243, 241, 241);
+    height:90%;
+}
+
+.navbar-brand{
+    transition:color 500ms !important;
+}
+
+.navbar-brand:hover{
+    color:rgb(197, 197, 27) !important;
+}
+
+.nav-item:hover{
+    background-color: rgb(31, 32, 31);
+    border-radius: 10px;
+}
+
+.dropdown-menu{
+    background-color: rgb(81, 91, 92);
+    border-radius: 10px;
+}
+.dropdown-item{
+    color:white !important;
+}
+
+.dropdown-item:hover{
+    background-color: rgb(101, 118, 121);
+}
+
+.table-head {
+    padding-top: 30px;
     font-size: 22px;
     font-weight: bolder;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
-.mytable{
-    padding:50px;
+.mytable {
+    padding: 50px;
     text-align: center;
 }
 
-.myform{
-    padding:50px;
-    margin:auto;
-    width:30%;
+.myform {
+    padding: 50px;
+    margin: auto;
+    width: 40%;
 }
 
-td{
+td {
     font-size: 14px;
-    white-space:pre-wrap;
-    word-wrap:break-word;
+    white-space: pre-wrap;
+    word-wrap: break-word;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+#AssignmentList tr td:nth-child(2) {
+    /* description of assignments needs to be more compact due to its possible large size */
+    font-size: 12px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+@media screen and (max-width:1000px) {
+    .mytable {
+        padding: 10px;
+    }
+    .myform {
+        width: 60%;
+    }
+    #AssignmentList tr td:nth-child(2) {
+        /* description of assignments needs to be more compact due to its possible large size */
+        font-size: 60%;
+    }
+}
+
 @media screen and (max-width: 600px) {
-    .mytable td{
+    .mytable {
+        padding: 0px;
+    }
+    .mytable td {
         font-size: 70%;
     }
-
+    .myform {
+        width: 80%;
+    }
 }
